--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -6,11 +6,11 @@
  emperor_reinforce_imperial_borders_title:0 "Reinforce Borders of The Empire" 
  emperor_reinforce_imperial_borders:0 "Reinforced Borders of The Empire"
  emperor_reinforce_imperial_borders_per_prince:0 "Reinforced Borders of The Empire"
- emperor_reinforce_imperial_borders_desc:0 "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§PDemand Additional Levies§!" decision\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
+ emperor_reinforce_imperial_borders_desc:0 "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
  demand_additional_levies_title:0 "Demand Additional Levies"
  demand_additional_levies_desc:0 "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t:0 "Emperor demands an additional levy"
- saelian.2.d:0 "Emperor of The Saelian Empire has just sent a request to every prince in the Empire. He demands to send him additional levy to "protect the Empire". How shall we respond?"
+ saelian.2.d:0 "Emperor of The Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to "protect the Empire". How shall we respond?"
  saelian.2.a:0 "We must obey his laws."
  saelian.2.b:0 "That is beyond our contract."
  fund_fort_construction_title:0 "Fund Castle Construction"
@@ -52,4 +52,38 @@
  investigate_heresy_title:0 "Investigate Heresy"
  investigate_heresy_tooltip:0 "Investigate heresy in their court, demanding them to return to true ways."
  investigate_heresy_desc:0 "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
- HAS_REFORMATION_CENTER:0 "Has at least 1 reformation center:"
+ HAS_REFORMATION_CENTER:0 "Has at least 1 reformation center"
+
+ emperor_enforce_imperial_will_title:0 "Enforce Imperial Will"
+ emperor_enforce_imperial_will:0 "Enforced Imperial Will"
+ emperor_enforce_imperial_will_desc:0 "Decisions of the Emperor were taken for granted for too long. Now everything [Monarch.GetSheHe] will be enforced as a law.\n---\n"
+ 
+ emperor_unify_courts_title:0 "Unify Courts"
+ emperor_unify_courts:0 "Unified Courts"
+ emperor_unify_courts_desc:0 "Courts are backbone of Imperial Law System, therefore they are the first target of Imperial Unification.\n---\n"
+
+ emperor_establish_standing_army_title:0 "Establish Standing Army"
+ emperor_establish_standing_army:0 "Established Standing Army"
+ emperor_establish_standing_army_desc:0 "If the Empire wants to reform into a modern state, it requires a modern army.\n---\n"
+ 
+ emperor_curtail_princely_power_title:0 "Curtain Princely Power"
+ emperor_curtail_princely_power:0 "Curtailed Princely Power"
+ emperor_curtail_princely_power_desc:0 "Imperial Unification is imminent. This step helps us secure our Empire against particularists.\n---\n"
+ 
+ emperor_unite_empire_title:0 "Unite The Empire"
+ emperor_unite_empire:0 "United The Empire"
+ emperor_unite_empire_desc:0 "Let the new Imperial Golden Age begin!\n---\n"
+
+ Demand_Levy:0 "Demand Levy"
+ TD_Imperial_Decree1_tooltip:0 "Demand Additional Levy from our subjects"
+ emperor_recently_demanded_levy:0 "Abused feudal contract"
+ Found_Towns:0 "Found Towns"
+ TD_Imperial_Decree2_tooltip:0 "Found new towns across the Empire"
+ random_dev_point_tooltip:0 "Gain §G1§! Random development point in §Y[This.GetName]§!."
+ emperor_new_towns:0 "New Town Founded"
+ Restrict_Synods:0 "Restrict Synods"
+ TD_Imperial_Decree3_tooltip:0 "Restrit organising synods in the Empire"
+ emperor_synods_banned:0 "Synods Restricted"
+ Bless_Wars:0 "Bless Wars"
+ TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
+ emperor_blessed_wars:0 "Blessed Wars"
