--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -5,6 +5,8 @@
  ifritican:0 "Ifritican"
  riyadunic:0 "Riyadunic"
  altaqadimi:0 "Altaqadimi"
+ antawilian:0 "Antawilian"
+ lamedinian:0 "Lamedinian"
 
  pohjoista_group:0 "Pohjoista"
  uzkolian:0 "Uzkolian"
@@ -27,6 +29,7 @@
  olegaro:0 "Olegaro"
  padosic:0 "Padosic"
  bratecian:0 "Bratecian"
+ contrafian:0 "Contrafian"
 
  ehreni_group:0 "Ehrenic"
  ehreni:0 "Ehreni"
@@ -39,7 +42,7 @@
  vementi:0 "Vementi"
 
  argenic_group:0 "Argenic"
- argenian:0 "argenian"
+ argenian:0 "Argenian"
  
  western_anavatic_group:0 "Western Anavatic"
  donucian:0 "Donucian"
@@ -66,3 +69,16 @@
  saelish:0 "Salish"
  ostemer:0 "Ostemer"
  nordmarker:0 "Nordmarker"
+
+ musarfic_group:0 "Musarfic"
+ sanedian:0 "Sanedian"
+ eyinar:0 "Eyinar"
+ sarqic:0 "Sarqic"
+
+ chilverchian_group:0 "Chilverchian"
+ marchien:0 "Marchien"
+ terolian:0 "Terolian"
+ chalian:0 "Chalian"
+ peninsul:0 "Peninsul"
+ vetican:0 "Vetican"
+ chofeudian:0 "Chofeudian"
