--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -21,7 +21,7 @@
  bogilish:0 "Bogilish"
  old_bogilish:0 "Old Bogilish" 
 
- liberathian_group:0 "Liberathian"
+ camarian_group:0 "Camarian"
 
  acerba_group:0 "Acerba"
  ignider:0 "Ignider"
