--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -12,6 +12,6 @@
  syvametsa_region:0 "Syvämetsä"
  indrigerland_region:0 "Indrigerland"
  arkabil_region:0 "Arkabil"
- western_liberathia_region:0 "Western Liberathia"
- eastern_liberathia_region:0 "Eastern Liberathia"
+ western_camaria_region:0 "Western Camaria"
+ eastern_camaria_region:0 "Eastern Camaria"
  confinia_region:0 "Confinia"
