--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -17,7 +17,7 @@
  dhahabia:0 "Dhahabia"
  hamidar:0 "Hamidar"
  sedica:0 "Sedica"
- western_liberathia:0 "Middle Patromnis"
- upper_liberathia:0 "Upper Patromnis"
+ western_camaria:0 "Middle Patromnis"
+ upper_camaria:0 "Upper Patromnis"
  argenia:0 "Argenia"
  dorchia:0 "Dorchean Isles"
