--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -297,11 +297,11 @@
  PROV296:0 ""
  PROV297:0 "Rõugemaa"
  PROV298:0 "Käbala"
- PROV299:0 ""
- PROV300:0 ""
- PROV301:0 ""
+ PROV299:0 "Imantspils"
+ PROV300:0 "Mezistrad"
+ PROV301:0 "Kaive"
  PROV302:0 "Merkatiman Sea"
- PROV303:0 ""
+ PROV303:0 "Jauna Muiza"
  PROV304:0 "Metsalu"
  PROV305:0 "Ilusjõgi"
  PROV306:0 "Metsaraba"
@@ -336,20 +336,20 @@
  PROV335:0 ""
  PROV336:0 ""
  PROV337:0 ""
- PROV338:0 ""
- PROV339:0 ""
- PROV340:0 ""
+ PROV338:0 "Salin"
+ PROV339:0 "Pariali"
+ PROV340:0 "Tigacij"
  PROV341:0 "Uzkolian Coast"
- PROV342:0 ""
- PROV343:0 ""
+ PROV342:0 "Tinumava"
+ PROV343:0 "Peleksmezs"
  PROV344:0 "Riyadunic Coast"
- PROV345:0 ""
- PROV346:0 ""
+ PROV345:0 "Blazma"
+ PROV346:0 "Hercegaosta"
  PROV347:0 "Sea of Laima"
- PROV348:0 ""
+ PROV348:0 "Sena Egle"
  PROV349:0 "Bogilander Coast"
- PROV350:0 ""
- PROV351:0 ""
+ PROV350:0 "Vaviejas"
+ PROV351:0 "Pušyneliai"
  PROV352:0 ""
  PROV353:0 ""
  PROV354:0 ""
@@ -395,20 +395,20 @@
  PROV394:0 ""
  PROV395:0 ""
  PROV396:0 ""
- PROV397:0 ""
- PROV398:0 ""
+ PROV397:0 "Vejosiai"
+ PROV398:0 "Tauragiris"
  PROV399:0 "Doniepr Fan"
- PROV400:0 ""
- PROV401:0 ""
- PROV402:0 ""
- PROV403:0 ""
- PROV404:0 ""
- PROV405:0 ""
- PROV406:0 ""
- PROV407:0 ""
- PROV408:0 ""
- PROV409:0 ""
- PROV410:0 ""
+ PROV400:0 "Forsi"
+ PROV401:0 "Lipava"
+ PROV402:0 "Didisyva"
+ PROV403:0 "Zirgukalnis"
+ PROV404:0 "Jasat"
+ PROV405:0 "Jaunapilset"
+ PROV406:0 "Ganijapa"
+ PROV407:0 "Isadeno"
+ PROV408:0 "Tiranol"
+ PROV409:0 "Aivijas"
+ PROV410:0 "Sata"
  PROV411:0 ""
  PROV412:0 "Ostsee"
  PROV413:0 ""
@@ -438,8 +438,8 @@
  PROV437:0 ""
  PROV438:0 ""
  PROV439:0 ""
- PROV440:0 ""
- PROV441:0 ""
+ PROV440:0 "Senukai"
+ PROV441:0 "Papedes"
  PROV442:0 "Matliman"
  PROV443:0 ""
  PROV444:0 ""
@@ -694,8 +694,8 @@
  PROV693:0 "Rzowienie"
  PROV694:0 "Winierz"
  PROV695:0 "Dzirz"
- PROV696:0 ""
- PROV697:0 ""
+ PROV696:0 "Dzintara"
+ PROV697:0 "Zagen"
  PROV698:0 "Aufentin"
  PROV699:0 "Neurech"
  PROV700:0 "Redingen"
@@ -778,7 +778,7 @@
  PROV777:0 ""
  PROV778:0 ""
  PROV779:0 ""
- PROV780:0 ""
+ PROV780:0 "Aukštadvaris"
  PROV781:0 ""
  PROV782:0 ""
  PROV783:0 ""
