--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ middellandse_sea:0 "Middelandse Sea"
+ alkalen_region:0 "Alkalen Sea"
  aqerb_region:0 "Aqerb"
  western_silvestria_region:0 "Western Silvestria"
  eastern_silvestria_region:0 "Eastern Silvestria"
