--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
+ TAEDIUM_BOOKMARK_TITLE:0 "Taedium Universalis"
+ TAEDIUM_BOOKMARK_DESC:0 "Taedium is boring and always was..."
+ 
  TAEDIUM_RUINS_OF_EMPIRE_TITLE:0 "Ruins of an Empire"
- TAEDIUM_RUINS_OF_EMPIRE_DESC:0 "Taedium is boring and always was..."
+ TAEDIUM_RUINS_OF_EMPIRE_DESC:0 "Ruins of an EmpireDESC"
+
  TAEDIUM_NORTHERN_LANDS_TITLE:0 "Northern Lands"
  TAEDIUM_NORTHERN_LANDS_DESC:0 "Northern Lands are Lands in the north... or so they told me."
+
+ TAEDIUM_AQERB_BOOKMARK_TITLE:0 "Crisis in Aqerb"
+ TAEDIUM_AQERB_BOOKMARK_DESC:0 "Aqerb DESC"
