--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -8,5 +8,5 @@
  TAEDIUM_NORTHERN_LANDS_TITLE:0 "Northern Lands"
  TAEDIUM_NORTHERN_LANDS_DESC:0 "Northern Lands are Lands in the north... or so they told me."
 
- TAEDIUM_AQERB_BOOKMARK_TITLE:0 "Crisis in Aqerb"
+ TAEDIUM_AQERB_BOOKMARK_TITLE:0 "Crisis in the West"
  TAEDIUM_AQERB_BOOKMARK_DESC:0 "Aqerb DESC"
