--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -326,6 +326,8 @@
  ZIL_ADJ:0 "Zilverpoorter"
  ADA:0 "Adasmerragadde"
  ADA_ADJ:0 "Adasmerragaddan"
+ DCH:0 "Dorchia"
+ DCH_ADJ:0 "Dorchian"
 
  RUB:0 "Rubmeo"
  RUB_ADJ:0 "Rubmean"
