--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- PROV1:0 "Prov1"
+ PROV1:0 "Geniburgh"
  PROV2:0 "Prov2"
  PROV3:0 "Prov3"
  PROV4:0 "Prov4"
@@ -354,7 +354,7 @@
  PROV353:0 ""
  PROV354:0 ""
  PROV355:0 ""
- PROV356:0 ""
+ PROV356:0 "Zilverpoort"
  PROV357:0 ""
  PROV358:0 ""
  PROV359:0 ""
@@ -363,12 +363,12 @@
  PROV362:0 ""
  PROV363:0 ""
  PROV364:0 ""
- PROV365:0 ""
+ PROV365:0 "Nunwals"
  PROV366:0 ""
  PROV367:0 ""
  PROV368:0 ""
- PROV369:0 ""
- PROV370:0 ""
+ PROV369:0 "Lending"
+ PROV370:0 "Enorland"
  PROV371:0 ""
  PROV372:0 ""
  PROV373:0 ""
@@ -792,7 +792,7 @@
  PROV791:0 ""
  PROV792:0 ""
  PROV793:0 ""
- PROV794:0 ""
+ PROV794:0 "Enging"
  PROV795:0 ""
  PROV796:0 ""
  PROV797:0 ""
@@ -804,15 +804,15 @@
  PROV803:0 ""
  PROV804:0 ""
  PROV805:0 ""
- PROV806:0 ""
- PROV807:0 ""
- PROV808:0 ""
+ PROV806:0 "Stánham"
+ PROV807:0 "Ulenbeorg"
+ PROV808:0 "Lebondun"
  PROV809:0 ""
- PROV810:0 ""
- PROV811:0 ""
- PROV812:0 ""
- PROV813:0 ""
- PROV814:0 ""
+ PROV810:0 "Cockhaven"
+ PROV811:0 "Daberg"
+ PROV812:0 "Arinuld"
+ PROV813:0 "Stanrocc"
+ PROV814:0 "Puckroyd"
  PROV815:0 ""
  PROV816:0 ""
  PROV817:0 "Eastern Indriger Sea"
