minor marstonia fixes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -14,7 +14,6 @@
  septentra_valley_area:0 "Septentra Valley"
  enamel_area:0 "Enamel"
  Limakoland_area:0 "Limakoland"
- dimak_area:0 "Dimak"
  lachel_area:0 "Lachel"
  kwadcoad_area:0 "Kwadcoad"
  maenabeg_area:0 "Maenabeg"
@@ -142,6 +141,7 @@
  aligeland_area:0 "Aligeland"
  soteva_pakranteje_area:0 "Soteva Pakranteje"
  didysis_mutova_area:0 "Didysis Mutova"
+ odwal_area:0 "Odwa"
  sena_egle_area:0 "Sena Egle"
  hermatia_area:0 "Hermatia"
  apoque_area:0 "Apoque"
