--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -19,7 +19,7 @@
  bohemian:0 "Bohemian"
  nevledian:0 "Nevledian"
  bogilish:0 "Bogilish"
- old_bogilish:0 "Old Bogilish" 
+ wedlan:0 "Wedlan" 
 
  camarian_group:0 "Camarian"
 
@@ -58,6 +58,7 @@
  marstonian_group:0 "Marstonian"
  aliger:0 "Aliger"
  nesokel:0 "Nesokel"
+ ziemelian:0 "Ziemelian"
 
  silvestrine_group:0 "Silvestrine"
  snaiwatzer:0 "Snaiwatzer"
