--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -8,3 +8,6 @@
  dhahabi_estuary_modifier:0 "Alnahrdhabi Estuary" 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
+ mezonian_toll:0 "Mezonian Toll"
+ MKH_quarters:0 "MKH Quarters"
+ MKH_trade_power:0 "MKH Quarters"
