--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -399,8 +399,8 @@
  PROV398:0 "Tauragiris"
  PROV399:0 "Doniepr Fan"
  PROV400:0 "Forsi"
- PROV401:0 "Lipava"
- PROV402:0 "Didisyva"
+ PROV401:0 "Mezonian Strait"
+ PROV402:0 "Zyntar"
  PROV403:0 "Zirgukalnis"
  PROV404:0 "Jasat"
  PROV405:0 "Jaunapilset"
@@ -694,7 +694,7 @@
  PROV693:0 "Rzowienie"
  PROV694:0 "Winierz"
  PROV695:0 "Dzirz"
- PROV696:0 "Dzintara"
+ PROV696:0 "Didisyva"
  PROV697:0 "Zagen"
  PROV698:0 "Aufentin"
  PROV699:0 "Neurech"
@@ -774,15 +774,15 @@
  PROV773:0 ""
  PROV774:0 ""
  PROV775:0 ""
- PROV776:0 ""
+ PROV776:0 "Prawy"
  PROV777:0 ""
  PROV778:0 ""
- PROV779:0 ""
+ PROV779:0 "Ciapag"
  PROV780:0 "Aukštadvaris"
- PROV781:0 ""
+ PROV781:0 "Liskowa"
  PROV782:0 ""
  PROV783:0 ""
- PROV784:0 ""
+ PROV784:0 "Przada"
  PROV785:0 ""
  PROV786:0 ""
  PROV787:0 ""
