--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -86,3 +86,11 @@
  Bless_Wars:0 "Bless Wars"
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
  emperor_blessed_wars:0 "Blessed Wars"
+
+ incident_nevledian_succession:0 "Nevledian Succession"
+ incident_nevledian_succession_member_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. The emperor called the imperial diet to resolve this problem."
+ incident_nevledian_succession_emperor_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. We called the imperial diet to resolve this problem."
+ SE_incident.3.t:0 "Fate of Nevledi"
+ SE_incident.3.desc:0 "With passing of the king of Nevledi, Sigimund z Powal, his country fallen into the hands of king of Bogiland - [BOG.Monarch.GetName]."
+ SE_incident.3.a:0 "Nevledi must remain as part of the Empire."
+ SE_incident.3.b:0 "We can't risk a war with Bogiland"
