--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -419,6 +419,8 @@
  HAF_ADJ:0 "Hafani"
  MEL:0 "Melkas"
  MEL_ADJ:0 "Melkasi"
+ THU:0 "Thunaswad"
+ THU_ADJ:0 "Thunaswadi"
 
  ARG:0 "Argenia"
  ARG_ADJ:0 "Argenian"
