--- a/localisation/TD_aqerb_flavour_l_english.yml
+++ b/localisation/TD_aqerb_flavour_l_english.yml
@@ -30,7 +30,7 @@
  acerb.1.desc:0 "Recent military campaign in yermic lands was a great success. Now it is time for an important decision - should we abide our promise to our vassals in the west and grant them their land? Or should we instead take it for ourselves?"
  acerb.1.a:0 "Transfer the territory to them"
  acerb.1.b:0 "I conquered this land, so it belongs to me!"
- acerb.2.t:0 "Death of Enrique II"
+ acerb.2.t:0 "Death of Enrique II\n£major_event_frame£"
  acerb.2.desc:0 "In the Year of our Lord, [GetYear], $MONARCHTITLE$ Enrique II de Verracia, also known as "the Conqueror", passed away and moved on to the eternal life. His body will be placed in royal Cathedral in the city of $CAPITAL_CITY$."
  acerb.2.a:0 "Your legacy will not be forgotten"
  acerb.2.a_tooltip:0 "You may now revoke "§YYermic Frontier§!" nobility privilege."
