--- a/localisation/TD_aqerb_flavour_l_english.yml
+++ b/localisation/TD_aqerb_flavour_l_english.yml
@@ -34,6 +34,7 @@
  acerb.2.desc:0 "In the Year of our Lord, [GetYear], $MONARCHTITLE$ Enrique II de Verracia, also known as "the Conqueror", passed away and moved on to the eternal life. His body will be placed in royal Cathedral in the city of $CAPITAL_CITY$."
  acerb.2.a:0 "Your legacy will not be forgotten"
  acerb.2.a_tooltip:0 "You may now revoke "§YYermic Frontier§!" nobility privilege."
+ acerb.2.b:0 "A new age of prosperity is coming."
  acerb.3.t:0 "Land viable for wine production"
  acerb.3.desc:0 "With recent conquest of $PROVINCE$, it became apparent that the soil and climate there is really suitable for growing grapes. How should we proceed?"
  acerb.3.a:0 "Great, let's set it up!"
