--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -357,7 +357,7 @@
  PROV356:0 "Zilverpoort"
  PROV357:0 ""
  PROV358:0 ""
- PROV359:0 ""
+ PROV359:0 "Hafani Coast"
  PROV360:0 ""
  PROV361:0 "East Furmarian Sea"
  PROV362:0 ""
@@ -761,7 +761,7 @@
  PROV760:0 ""
  PROV761:0 ""
  PROV762:0 ""
- PROV763:0 ""
+ PROV763:0 "Batnoam depth"
  PROV764:0 ""
  PROV765:0 ""
  PROV766:0 ""
@@ -1031,7 +1031,7 @@
  PROV1030:0 ""
  PROV1031:0 ""
  PROV1032:0 ""
- PROV1033:0 ""
+ PROV1033:0 "Muzbahi Bay"
  PROV1034:0 ""
  PROV1035:0 ""
  PROV1036:0 ""
@@ -1119,59 +1119,59 @@
  PROV1118:0 ""
  PROV1119:0 ""
  PROV1120:0 ""
- PROV1121:0 "Bure"
- PROV1122:0 "Bagoe"
- PROV1123:0 "Segu"
- PROV1124:0 "Joma"
- PROV1125:0 "Kong"
- PROV1126:0 "Ivory Coast"
- PROV1127:0 "Tuat"
- PROV1128:0 "Taudeni"
- PROV1129:0 "Azawad"
- PROV1130:0 "Tadmekka"
- PROV1131:0 "Massina"
- PROV1132:0 "Timbuktu"
- PROV1133:0 "Gao"
- PROV1134:0 "Jenne"
+ PROV1121:0 ""
+ PROV1122:0 ""
+ PROV1123:0 ""
+ PROV1124:0 ""
+ PROV1125:0 ""
+ PROV1126:0 ""
+ PROV1127:0 ""
+ PROV1128:0 ""
+ PROV1129:0 ""
+ PROV1130:0 ""
+ PROV1131:0 ""
+ PROV1132:0 ""
+ PROV1133:0 ""
+ PROV1134:0 ""
  PROV1135:0 "Bay of Dagica"
- PROV1136:0 "Gurma"
- PROV1137:0 "Wagadugu"
- PROV1138:0 "Kumasi"
- PROV1139:0 "Gold Coast"
- PROV1140:0 "Abomey"
- PROV1141:0 "Whydah"
- PROV1142:0 "Dendi"
- PROV1143:0 "Borgu"
+ PROV1136:0 ""
+ PROV1137:0 ""
+ PROV1138:0 ""
+ PROV1139:0 ""
+ PROV1140:0 ""
+ PROV1141:0 ""
+ PROV1142:0 ""
+ PROV1143:0 ""
  PROV1144:0 "Yanlan Coast"
- PROV1145:0 "Nupe"
- PROV1146:0 "Ife"
- PROV1147:0 "Benin"
- PROV1148:0 "Gobir"
- PROV1149:0 "Katsina"
- PROV1150:0 "Zamfara"
- PROV1151:0 "Bonny"
- PROV1152:0 "Idah"
- PROV1153:0 "Pindinga"
- PROV1154:0 "Zazzau"
- PROV1155:0 "Kano"
- PROV1156:0 "Damagaram"
- PROV1157:0 "Borno"
- PROV1158:0 "Kanem"
- PROV1159:0 "Bagirmi"
- PROV1160:0 "Mandara"
- PROV1161:0 "Bauchi"
- PROV1162:0 "Wukari"
- PROV1163:0 "Calabar"
- PROV1164:0 "Cameroon"
- PROV1165:0 "Gabon"
- PROV1166:0 "Loango"
- PROV1167:0 "Luanda"
- PROV1168:0 "Mbamba"
- PROV1169:0 "Anziku"
- PROV1170:0 "Mpemba"
- PROV1171:0 "Ndongo"
- PROV1172:0 "Benguela"
- PROV1173:0 "Namibia"
+ PROV1145:0 ""
+ PROV1146:0 ""
+ PROV1147:0 ""
+ PROV1148:0 ""
+ PROV1149:0 ""
+ PROV1150:0 ""
+ PROV1151:0 ""
+ PROV1152:0 ""
+ PROV1153:0 ""
+ PROV1154:0 ""
+ PROV1155:0 ""
+ PROV1156:0 ""
+ PROV1157:0 ""
+ PROV1158:0 ""
+ PROV1159:0 ""
+ PROV1160:0 ""
+ PROV1161:0 ""
+ PROV1162:0 ""
+ PROV1163:0 ""
+ PROV1164:0 ""
+ PROV1165:0 ""
+ PROV1166:0 ""
+ PROV1167:0 ""
+ PROV1168:0 ""
+ PROV1169:0 ""
+ PROV1170:0 ""
+ PROV1171:0 ""
+ PROV1172:0 ""
+ PROV1173:0 ""
  PROV1174:0 "Ezorongondo"
  PROV1175:0 "Lesser Namaqualand"
  PROV1176:0 "Roggeveld"
