--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -12,8 +12,9 @@
  uzkolian:0 "Uzkolian"
  tummic:0 "Tummic"
  njunnialmmuk:0 "Njunnialmmuk"
- lounavaki:0 "Lounavaki"
- metsavaki:0 "Metsavaki"
+ lounavaki:0 "Lounaväki"
+ metsavaki:0 "Metsäväki"
+ yhalumivaki:0 "Yhälumiväki"
  
  bogilander_group:0 "Bogilander"
  bohemian:0 "Bohemian"
@@ -54,6 +55,9 @@
  rouvian:0 "Rouvian"
  gyrdian:0 "Gyrdian"
  dorchean:0 "Dorchean"
+ nabhini:0 "Nabhini"
+ oileamer:0 "Oileamer"
+ glaser:0 "Glaser"
 
  marstonian_group:0 "Marstonian"
  aliger:0 "Aliger"
@@ -84,3 +88,14 @@
  peninsul:0 "Peninsul"
  vetican:0 "Vetican"
  chofeudian:0 "Chofeudian"
+
+ mubahi_group:0 "Muzbahi"
+ hafani:0 "Hafani"
+ musatemaran:0 "Musatemaran"
+ pusgivah:0 "Pusgivah"
+
+ almurtafan_group:0 "Almurtafan"
+ sefertian:0 "Sefertian"
+
+ mesutian_group:0 "Mesutian"
+ ribyah:0 "Ribyah"
