--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -976,10 +976,10 @@
  PROV975:0 ""
  PROV976:0 ""
  PROV977:0 "Balsahra Oasis"
- PROV978:0 ""
- PROV979:0 ""
+ PROV978:0 "Qadi'madina" #city old
+ PROV979:0 "Sabir" #saber
  PROV980:0 ""
- PROV981:0 ""
+ PROV981:0 "Arak" #cavern
  PROV982:0 ""
  PROV983:0 ""
  PROV984:0 ""
@@ -1007,7 +1007,7 @@
  PROV1006:0 ""
  PROV1007:0 ""
  PROV1008:0 ""
- PROV1009:0 ""
+ PROV1009:0 "Jabal Qalil" #mountain low
  PROV1010:0 ""
  PROV1011:0 ""
  PROV1012:0 "Fawud"
@@ -1025,50 +1025,50 @@
  PROV1024:0 ""
  PROV1025:0 ""
  PROV1026:0 ""
- PROV1027:0 ""
- PROV1028:0 ""
+ PROV1027:0 "mumtalakat" #estate
+ PROV1028:0 "Mazar Eyina" #Tomb Eyina
  PROV1029:0 "Arctic Sea"
- PROV1030:0 ""
- PROV1031:0 ""
- PROV1032:0 ""
+ PROV1030:0 "'ardi Burj" #ground tower
+ PROV1031:0 "Bustan" #grove
+ PROV1032:0 "Yuqabila" #meet
  PROV1033:0 "Muzbahi Bay"
- PROV1034:0 ""
- PROV1035:0 ""
- PROV1036:0 ""
- PROV1037:0 ""
- PROV1038:0 ""
- PROV1039:0 ""
- PROV1040:0 ""
- PROV1041:0 ""
- PROV1042:0 ""
+ PROV1034:0 "Bayt Ramh" #ramh home
+ PROV1035:0 "Coast of Rakaban"
+ PROV1036:0 "Wadi" #stream
+ PROV1037:0 "Nahr Murtafie" #high river
+ PROV1038:0 "Talalqutn" #cotton hill
+ PROV1039:0 "Derb Jaf" #road dry
+ PROV1040:0 "Shaqudam"
+ PROV1041:0 "Difat Janubia" #bank south
+ PROV1042:0 "Ramaal Musataha" #Flat sands
  PROV1043:0 ""
- PROV1044:0 ""
- PROV1045:0 ""
- PROV1046:0 ""
+ PROV1044:0 "Alhaud" #the Reservoir
+ PROV1045:0 "Fuyada"
+ PROV1046:0 "Majnun"
  PROV1047:0 ""
- PROV1048:0 ""
- PROV1049:0 ""
- PROV1050:0 ""
- PROV1051:0 ""
- PROV1052:0 ""
- PROV1053:0 ""
- PROV1054:0 ""
- PROV1055:0 ""
- PROV1056:0 ""
- PROV1057:0 ""
+ PROV1048:0 "Shati" #coast
+ PROV1049:0 "Derb Imadra" #imadra road
+ PROV1050:0 "Qaryat Jafa" #dry village
+ PROV1051:0 "Bayt Kuhbiri" #kuhbiri home
+ PROV1052:0 "Qatie" #herd
+ PROV1053:0 "Manjam Qadim" #mine old
+ PROV1054:0 "Ain'ajuaf" #oasis shallow  
+ PROV1055:0 "Ramaal zmumila" #sands boring 
+ PROV1056:0 "Qadarim" 
+ PROV1057:0 "" 
  PROV1058:0 ""
  PROV1059:0 "Sayaanud Oasis"
  PROV1060:0 ""
- PROV1061:0 ""
- PROV1062:0 ""
- PROV1063:0 ""
- PROV1064:0 ""
- PROV1065:0 ""
+ PROV1061:0 "Sandana" #anvil
+ PROV1062:0 "Bayt Alusarq" #Home alusarq 
+ PROV1063:0 "Zadanah"
+ PROV1064:0 "Lurans" #Lurans
+ PROV1065:0 "Tariq Tunihar" #tunihar road
  PROV1066:0 ""
- PROV1067:0 ""
- PROV1068:0 ""
- PROV1069:0 ""
- PROV1070:0 ""
+ PROV1067:0 "Aljibb" #the well
+ PROV1068:0 "Matjar Aljamal" #shop camel
+ PROV1069:0 "Alaikhtisar" #shortcut
+ PROV1070:0 "Nasrya"
  PROV1071:0 ""
  PROV1072:0 ""
  PROV1073:0 ""
@@ -1088,7 +1088,7 @@
  PROV1087:0 ""
  PROV1088:0 ""
  PROV1089:0 ""
- PROV1090:0 ""
+ PROV1090:0 "Qalat" #fortress
  PROV1091:0 ""
  PROV1092:0 ""
  PROV1093:0 ""
@@ -1098,7 +1098,7 @@
  PROV1097:0 ""
  PROV1098:0 ""
  PROV1099:0 ""
- PROV1100:0 ""
+ PROV1100:0 "Qupatra"
  PROV1101:0 ""
  PROV1102:0 ""
  PROV1103:0 ""
