--- a/localisation/TD_aqerb_ideas_l_english.yml
+++ b/localisation/TD_aqerb_ideas_l_english.yml
@@ -10,6 +10,10 @@
  idea_cultural_inspiration:0 "Cultural assimilation"
  idea_estate_council:0 "Estate Council"
 
+ marcan_kingdom_ideas:0 "Novoregnian Ideas"
+ marcan_kingdom_ideas_start:0 "Novoregnian Traditions"
+ marcan_kingdom_ideas_bonus:0 "Novoregnian Ambition"
+
  narbonese_ideas:0 "Narbonese Ideas"
  narbonese_ideas_start:0 "Narbonese Traditions"
  narbonese_ideas_bonus:0 "Narbonese Ambition"
