--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -27,3 +27,6 @@
  independent_acerbic_march_reform_desc:0 "Acerbic marches were created after king Enrique II granted the newly conquered land to his most loyal (and zealous) subjects, but now they stand by themselves in the world with no senior ruler."
  narbonese_monarchy_reform:0 "Narbonese Monarchy"
  narbonese_monarchy_reform_desc:0 "This government represents state of Narbonese Monarchy during the reign of Enrique II - decentralized patrimonial monarchy with subject bound by loyalty and not blood."
+ marcan_kingdom_reform:0 "Marcan Kingdom"
+ marcan_kingdom_reform_desc:0 "After gaining independence the country needed thourough reform - this is what led to marcan kingdom of Novoregno, less zealous but more united - both in religious and secular ways."
+ 
