--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -1,17 +1,32 @@
 ﻿l_english:
- tummland_nation_title:0 "Unite Tummland"
+ tummland_nation_title:0 "Unite Tummland @TML"
  tummland_nation_desc:0 "Tummland has been under foreign rule for far to long. It is time we unite and show the world our might!"
- ansgarland_nation_title:0 "Restore Kingdom of Ansgarland"
+
+ ansgarland_nation_title:0 "Restore Kingdom of Ansgarland @ANS"
  ansgarland_nation_desc:0 "Kingdom of Ansgarland was short-lived state during the middle ages. It was proclaimed after Ansgar, duke of Sylvenmark, conquered the glaser peninsula. Despite existing for only 80 years, it made the way for geoberic culture to emerge and influence this region for years to come."
- bogiland_nation_title:0 "Restore Kingdom of Bogiland"
+
+ bogiland_nation_title:0 "Restore Kingdom of Bogiland @BOG"
  bogiland_nation_desc:0 "Restore Bogiland DESC"
- nifthem_nation_title:0 "Unite People of Nifthem"
+
+ nifthem_nation_title:0 "Unite People of Nifthem @NIF" 
  nifthem_nation_desc:0 "Nifthem DESC"
- argenia_nation_title:0 "Reunite Argenia"
+
+ argenia_nation_title:0 "Reunite Argenia @ARG"
  argenia_nation_desc:0 "Argenia DESC"
  integrate_brother_argenia_tooltip:0 "[Root.GetName] integrates territory of the unlawful ruler into its domain."
- nordmark_nation_title:0 "Form Nordmark"
+
+ nordmark_nation_title:0 "Form Nordmark @NRD"
  nordmark_nation_desc:0 "Just like Glaser people in the west, now gyrdians need to be assimilated to protect the northern border of the empire."
- dorchia_nation_title:0 "Unite Dorchia"
+
+ dorchia_nation_title:0 "Unite Dorchia @DOR"
  dorchia_nation_desc:0 "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when dorchian "kingdoms" were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
+
+ aqerb_nation_title:0 "Unite Aqerb @AQE"
+ aqerb_nation_desc:0 "During most of its history, Aqerb was a land divided between various warring states. When it was united uned 'Ard Yanduz we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under the [Dynasty.GetName] dynasty!"
  
+ carba_nation_title:0 "Unite Carba @CAR"
+ carba_nation_desc:0 "During most of its history, Carba was a land divided between various warring states. When it was united uned 'Ard Yanduz it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under the [Dynasty.GetName] dynasty!"
+
+ novoregno_nation_title:0 "Proclaim the Kingdom of Novoregno @NOV"
+ novoregno_nation_desc:0 "After securing the independence from our former overlords, now comes the time of forming a new national identity to further solidify the self-reliance."
+ novoregno_formation_tooltip:0 "Gain claims on all §Yyermic§! provinces in the Aqerb."
