--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -166,6 +166,8 @@
  EIS_ADJ:0 "Eisenburger"
  KRS:0 "Kristen"
  KRS_ADJ:0 "Kristener"
+ LIH:0 "Lichter"
+ LIH_ADJ:0 "Lichtener"
  DOU:0 "Douardour"
  DOU_ADJ:0 "Douardourer"
  ZIG:0 "Zieglerheim"
