--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -94,3 +94,20 @@
  SE_incident.3.desc:0 "With passing of the king of Nevledi, Sigimund z Powal, his country fallen into the hands of king of Bogiland - [BOG.Monarch.GetName]."
  SE_incident.3.a:0 "Nevledi must remain as part of the Empire."
  SE_incident.3.b:0 "We can't risk a war with Bogiland"
+
+ request_kingship_title:0 "Request Kingship"
+ request_kingship_desc:0 "To solidify our claims to this land, we may requests the emperor of the Saelian Empire to grant us is grace and elevate our ruler to a mighty king."
+ saelian.4.t:0 "Prince requests kingship"
+ saelian.4.desc:0 "Earlier this morning a delegation came from one of our prince's regarding granting them a title of kingdom. They argue that this will make collecting imperial taxes easier and potentially be a greater help to the emperor during a time of need. How shall we respond?"
+ saelian.4.a:0 "Looks like we have a new king in town"
+ saelian.4.b:0 "Preposterous..."
+
+ saelian.5.t:0 "Emperor Accepted!"
+ saelian.5.desc:0 "Imperial legate came bringing good news - the emperor accepted our petition to become a king."
+ saelian.5.a:0 "Let's start planning a coronation"
+ emperor_granted_kingship:0 "Kingship Granted"
+
+ saelian.6.t:0 "Emperor Declined!"
+ saelian.6.desc:0 "Sad news coming from the imperial capital - emperor has declined our petition."
+ saelian.6.a:0 "..."
+ emperor_not_granted_kingship:0 "Kingship Rejected"
