--- a/localisation/TD_aqerb_flavour_l_english.yml
+++ b/localisation/TD_aqerb_flavour_l_english.yml
@@ -2,8 +2,11 @@
  restore_rouvian_glory_title:0 "Restore Rouvian Glory"
  restore_rouvian_glory_desc:0 "Desc"
 
+ acerb_new_march:0 "New March"
+
  estate_nobles_yermic_frontier:0 "Yermic Frontier"
  estate_nobles_yermic_frontier_desc:0 "After stabilizing his realm, king Enrique II moved on to 'stabilize' realms of neighboring yermic states. To make the conquest and control over his court easier, he granted the land to his most skillful knights and counts."
+ enrique_II_alive_tt:0 "Enrique II is no longer a ruler"
  acerb.1.t:0 "New land subdued"
  acerb.1.desc:0 "Recent military campaign in yermic lands was a great success. Now it is time for an important decision - should we abide our promise to our vassals in the west and grant them their land? Or should we instead take it for ourselves?"
  acerb.1.a:0 "Transfer the territory to them"
