--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  emperor_call_for_reform_title:0 "Call for Reform"
  emperor_call_for_reform:0 "Call for Reform"
+ emperor_call_for_reform_emperor:0 "Call for Reform"
  emperor_call_for_reform_desc:0 "The Empire is in desperate need of reformation.\n---"
 
  emperor_reinforce_imperial_borders_title:0 "Reinforce Borders of The Empire" 
@@ -85,7 +86,7 @@
  emperor_synods_banned:0 "Synods Restricted"
  Bless_Wars:0 "Bless Wars"
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
- emperor_blessed_wars:0 "Blessed Wars"
+ emperor_blessed_war:0 "Blessed Wars"
 
  incident_nevledian_succession:0 "Nevledian Succession"
  incident_nevledian_succession_member_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. The emperor called the imperial diet to resolve this problem."
