--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -211,7 +211,7 @@
  obj_humiliate_rival_desc:0 "Humiliate a rival through a peace treaty."
  obj_humiliate_rival_tooltip:0 "Humiliated a Rival"
  obj_christian_convert:0 "Join the Reformation"
- obj_christian_convert_desc:2 "Change state religion to Protestant, Reformed, Anglican, or Hussite religion."
+ obj_christian_convert_desc:2 "Change state religion to Liemarian."
  obj_humanism_religious:0 "Humanist or Religious"
  obj_humanism_religious_desc:0 "Fully embrace either the Humanism or Religious idea group."
  obj_convert_10_provinces:0 "Convert Provinces"
