--- a/localisation/TD_pohjoismaa_flavour_l_english.yml
+++ b/localisation/TD_pohjoismaa_flavour_l_english.yml
@@ -2,8 +2,8 @@
  group_tummic_ideas:0 "Tummic Minor Ideas"
  group_tummic_ideas_start:0 "Tummic Minor Traditions"
  group_tummic_ideas_bonus:0 "Tummic Minor Ambition" 
- idea_forest_folk:0 "Forest Folk"
- idea_forest_folk_desc:0 "Living in a land of cold winters and harsh forests gives us a unique advantage against enemies in this type of terrain. The strategy is to let the enemy tire themselves out looking for our armies and strike when the opportunity arises."
+ tummic_forest_folk:0 "Forest Folk"
+ tummic_forest_folk_desc:0 "Living in a land of cold winters and harsh forests gives us a unique advantage against enemies in this type of terrain. The strategy is to let the enemy tire themselves out looking for our armies and strike when the opportunity arises."
  tummic_fur_trade:0 "Fur Trade"
  tummic_fur_trade_desc:0 "Fur is a valuable resource. Not only it makes for a warm coat, but also looks 'cool as hell'. And who if not tummic people are its biggest supply to Taedium."
  tummic_sointuva:0 "Sointuva"
