--- a/localisation/TD_aqerb_flavour_l_english.yml
+++ b/localisation/TD_aqerb_flavour_l_english.yml
@@ -11,6 +11,7 @@
  acerb.1.desc:0 "Recent military campaign in yermic lands was a great success. Now it is time for an important decision - should we abide our promise to our vassals in the west and grant them their land? Or should we instead take it for ourselves?"
  acerb.1.a:0 "Transfer the territory to them"
  acerb.1.b:0 "I conquered this land, so it belongs to me!"
+ narbone_broken_promise:0 "Broken Promise"
  acerb.2.t:0 "Death of Enrique II\n£major_event_frame£"
  acerb.2.desc:0 "In the Year of our Lord, [GetYear], $MONARCHTITLE$ Enrique II de Verracia, also known as "the Conqueror", passed away and moved on to the eternal life. His body will be placed in royal Cathedral in the city of $CAPITAL_CITY$."
  acerb.2.a:0 "Your legacy will not be forgotten"
@@ -21,4 +22,4 @@
  acerb.3.a:0 "Great, let's set it up!"
  acerb.3.b:0 "It is not worth the hassle."
  acerb_new_vineyards:0 "New Vineyards"
-
+ acerb_new_vineyards:0 "New Vineyards have been established in this province due to new owners and high demand."
