--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -91,6 +91,13 @@
  incident_nevledian_succession:0 "Nevledian Succession"
  incident_nevledian_succession_member_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. The emperor called the imperial diet to resolve this problem."
  incident_nevledian_succession_emperor_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. We called the imperial diet to resolve this problem."
+ SE_incident.1.t:0 "Legacy of king Sigimund"
+ SE_incident.1.desc:0 "todo"
+ SE_incident.1.a:0 "We need to follow his will"
+ SE_incident.1.b:0 "Loyalty to the emperor is more important"
+ SE_incident.2.t:0 "Nevledi submits"
+ SE_incident.2.desc:0 "News are coming from kingdom of Nevledi - after the death of king Sigimund z Powal, it was decided, based on late king's will, that his domain will fall under the rule of king of Bogiland."
+ SE_incident.2.a:0 "Splendid"
  SE_incident.3.t:0 "Fate of Nevledi"
  SE_incident.3.desc:0 "With passing of the king of Nevledi, Sigimund z Powal, his country fallen into the hands of king of Bogiland - [BOG.Monarch.GetName]."
  SE_incident.3.a:0 "Nevledi must remain as part of the Empire."
