--- a/localisation/TD_liemarian_l_english.yml
+++ b/localisation/TD_liemarian_l_english.yml
@@ -15,3 +15,14 @@
  liemarian.3.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
  liemarian.3.a:0 "Maybe they are right..."
  liemarian.3.b:0 "This will blew over"
+
+ mobilisation_against_evil:0 "Mobilization Against Evil"
+ mobilisation_against_evil_DESC:0 "To free the world from evil we need to fight not only in teological duels, but also in earthly battles."
+ popularise_philosophical_education:0 "Popularize Philosophical Education"
+ popularise_philosophical_education_DESC:0 "To further the conversion of heathens, every person not only needs to know how to discuss and debate, but also how the world around them works."
+ new_world_missionaries:0 "New World Missionaries"
+ new_world_missionaries_DESC:0 "New World primitives are like a virgin soil for our new religious worldview, and we shall bring them knowledge of it."
+ unite_liemarian_community:0 "Strengthen Liemarian Community"
+ unite_liemarian_community_DESC:0 "Strength comes from unity, and so we must bring liemarians together and focus on the common enemy."
+ 
+ 
