--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -105,7 +105,7 @@
 
  request_kingship_title:0 "Request Kingship"
  request_kingship_desc:0 "To solidify our claims to this land, we may requests the emperor of the Saelian Empire to grant us is grace and elevate our ruler to a mighty king."
- saelian.4.t:0 "Prince requests kingship"
+ saelian.4.t:0 "Prince Requests kingship"
  saelian.4.desc:0 "Earlier this morning a delegation came from one of our prince's regarding granting them a title of kingdom. They argue that this will make collecting imperial taxes easier and potentially be a greater help to the emperor during a time of need. How shall we respond?"
  saelian.4.a:0 "Looks like we have a new king in town"
  saelian.4.b:0 "Preposterous..."
