--- a/localisation/TD_aqerb_flavour_l_english.yml
+++ b/localisation/TD_aqerb_flavour_l_english.yml
@@ -23,3 +23,47 @@
  acerb.3.b:0 "It is not worth the hassle."
  acerb_new_vineyards:0 "New Vineyards"
  acerb_new_vineyards:0 "New Vineyards have been established in this province due to new owners and high demand."
+
+ group_march_ideas:0 "Marcan Ideas"
+ group_march_ideas_start:0 "Marcan Traditions"
+ group_march_ideas_bonus:0 "Marcan Ambition"
+ idea_war_of_the_faithful:0 "War of the Faithful"
+ idea_modernized_fortifications:0 "Modern Fortifications"
+ idea_land_grants:0 "Land Grants"
+ idea_sea_frontier:0 "Sea Frontier"
+ idea_pistoleros:0 "The Pistoleros"
+ idea_cultural_inspiration:0 "Cultural assimilation"
+ idea_estate_council:0 "Estate Council"
+
+ marcan_kingdom_ideas:0 "Novoregnian Ideas"
+ marcan_kingdom_ideas_start:0 "Novoregnian Traditions"
+ marcan_kingdom_ideas_bonus:0 "Novoregnian Ambition"
+
+ narbonese_ideas:0 "Narbonese Ideas"
+ narbonese_ideas_start:0 "Narbonese Traditions"
+ narbonese_ideas_bonus:0 "Narbonese Ambition"
+ idea_vinedos_reales:0 "Viñedos reales"
+ idea_bank_of_caytuna:0 "Bank of Caytuna"
+ idea_land_of_the_pious:0 "Land of the Pious"
+ idea_brothers_in_faith:0 "Brothers in Faith"
+ idea_centralized_royal_domain:0 "Centralized Royal Domain"
+ idea_beyond_the_ocean:0 "Beyond the Ocean"
+ idea_reforms_of_Manuel:0 "Manuelan Reforms"
+
+ group_aqerbic_ideas:0 "Aqerbic Minor ideas"
+ group_aqerbic_ideas_start:0 "Aqerbic Minor Traditions"
+ group_aqerbic_ideas_bonus:0 "Aqerbic Minor Ambition"
+ AQERB_seafarer_culture:0 "Seafarer Culture"
+ AQERB_seafarer_culture_desc:0 "People of Aqerb are descendats of muzbahi colonists and explorers and this blood still flows in our veins. Sea is undeniably important part of our lifestyle - either through trade or fishing."
+ AQERB_legacy_of_yermians:0 "Legacy of Yermians"
+ AQERB_legacy_of_yermians_desc:0 "The need to explore the outer sea and seek trade partners is almost as important as bread and water to aqerbic person. Yermians, and more specifically muzbahi, are known to establish many colonies in the mocitian sea - even the aqerb was once only a colony."
+ AQERB_in_the_name_of_patron:0 "In the Name of Patron"
+ AQERB_in_the_name_of_patron_desc:0 "Patrons are almost holy, but pious, figures in aqerbic history. Most of them have been pious priests, but sometimes important figures, such as politicians and rulers, also may claim this title. For their service to the Ilum, they are granted patronhood over important cities and places which might have been important to them during their lifetime."
+ AQERB_sacred_geometry:0 "Sacred Geometry"
+ AQERB_sacred_geometry_desc:0 "Many great minds believe that there is something inherently sacred about geometric shapes and patterns. This belief quickly spread during the time of 'Yanduzian Renaissance' which caused many buildings and structures to include symmetrical and repeating patterns. Not only is this aesthetically pleasing, but also leads to deeper knowledge about the universe."
+ AQERB_irrigation_efforts:0 "Irrigation Efforts"
+ AQERB_irrigation_efforts_desc:0 "Most of settlements in aqerbic peninsula are based either on a major river, such as Zawarqabad, or on a smaller river but near the coast, such as Zibarat, with growing expansion of aqerbic states and subsequentially their population came the need of delivering fresh water to drier places. Now, thanks to years of building and maintaining advanced irrigation systems, cities like Barqanah can prosper withouth direct connection to a water source."
+ AQERB_palace_strongholds:0 "Palace Strongholds"
+ AQERB_palace_strongholds_desc:0 "Our beautiful peninsula wasn't always a good place to live. Many wars, internal conflicts, invaders from the sea and now from the east have caused widespread devastation in rural areas. With this palaces became obsolete, and elites, wanting to still show off their wealth, started building castles in easily defendable positions, which are characteristic for their elaborate structures and rich decorations."
+ AQERB_family_bonds:0 "Family Bonds"
+ AQERB_family_bonds_desc:0 "What is more important than family? According to aqerbic, only the true God. Lesser family members who have a slim chance of inheriting anything meaningful often pursue a scholarly or military careers. This helps to keep the power within the elite, as they are both the rulers and advisors."
