--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1670,7 +1670,7 @@
  PROV1669:0 "PROV1669"
  PROV1670:0 "PROV1670"
  PROV1671:0 "PROV1671"
- PROV1672:0 "PROV1672"
+ PROV1672:0 "Zandigehaven"
  PROV1673:0 "PROV1673"
  PROV1674:0 "PROV1674"
  PROV1675:0 "PROV1675"
