--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -26,6 +26,7 @@
  
  carba_nation_title:0 "Unite Carba @CAR"
  carba_nation_desc:0 "During most of its history, Carba was a land divided between various warring states. When it was united uned 'Ard Yanduz it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under the [Root.Dynasty.GetName] dynasty!"
+ CAR_integrate_subjects_tt:0 "Integrate every aqerbic §Yvassal§! into our nation. This action will cost us §Y5§! £adm£ and §Y5§! £dip£ per province."
 
  novoregno_nation_title:0 "Proclaim the Kingdom of Novoregno @NOV"
  novoregno_nation_desc:0 "After securing the independence from our former overlords, now comes the time of forming a new national identity to further solidify the self-reliance."
