--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -6,7 +6,7 @@
  eastern_silvestria_region:0 "Eastern Silvestria"
  bogiland_region:0 "Bogiland"
  nifthem_region:0 "Nifthem"
- argenia_region:0 "Argenia"
+ argenia_region:0 "Dorchean Isles"
  chilverchia_region:0 "Chilverchia"
  marstonia_region:0 "Marstonia"
  merkaatimaa_region:0 "Merkaatimaa"
