--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -309,7 +309,9 @@
  MAE_ADJ:0 "Maenabeger"
  KWA:0 "Kwadcoad"
  KWA_ADJ:0 "Kwadcoader"
- 
+ GYR:0 "Gyrdia"
+ GYR_ADJ:0 "Gyrdian" 
+
  EOR:0 "Eoredyg"
  EOR_ADJ:0 "Eoredygian"
  AID:0 "Aideich"
