--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -22,12 +22,15 @@
  dorchia_nation_desc:0 "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when dorchian "kingdoms" were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
 
  aqerb_nation_title:0 "Unite Aqerb @AQE"
- aqerb_nation_desc:0 "During most of its history, Aqerb was a land divided between various warring states. When it was united uned 'Ard Yanduz we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under the [Root.Dynasty.GetName] dynasty!"
+ aqerb_nation_desc:0 "During most of its history, Aqerb was a land divided between various warring states. When it was united uned 'Ard Yanduz we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under [Root.Monarch.Dynasty.GetName] dynasty!"
  
  carba_nation_title:0 "Unite Carba @CAR"
- carba_nation_desc:0 "During most of its history, Carba was a land divided between various warring states. When it was united uned 'Ard Yanduz it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under the [Root.Dynasty.GetName] dynasty!"
+ carba_nation_desc:0 "During most of its history, Carba was a land divided between various warring states. When it was united uned 'Ard Yanduz it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under [Root.Monarch.Dynasty.GetName] dynasty!"
  CAR_integrate_subjects_tt:0 "Integrate every aqerbic §Yvassal§! into our nation. This action will cost us §Y5§! £adm£ and §Y5§! £dip£ per province."
 
  novoregno_nation_title:0 "Proclaim the Kingdom of Novoregno @NOV"
  novoregno_nation_desc:0 "After securing the independence from our former overlords, now comes the time of forming a new national identity to further solidify the self-reliance."
  novoregno_formation_tooltip:0 "Gain claims on all §Yyermic§! provinces in the Aqerb."
+
+ gyrdia_nation_title:0 "Unite Gyrdia @GYR"
+ gyrdia_nation_desc:0 "DESC"
