--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -2,3 +2,4 @@
  baqaya_merc:0 "Baqaya Company"
  villit_miehet_merc:0 "Villit Miehet"
  free_chevaliers_merc:0 "Free Chevaliers"
+ glaser_band:0 "Glaser Band"
