--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -14,6 +14,7 @@
  argenia_nation_title:0 "Reunite Argenia @ARG"
  argenia_nation_desc:0 "Argenia DESC"
  integrate_brother_argenia_tooltip:0 "§Y[Root.GetName]§! integrates territory of the unlawful ruler into its domain."
+ argenia_trigger_tt:0 "Is either §YAnginneowu§! or§Y Ethelnothdun§! and the other country doesn't exist or is your subject."
 
  nordmark_nation_title:0 "Form Nordmark @NRD"
  nordmark_nation_desc:0 "Just like Glaser people in the west, now gyrdians need to be assimilated to protect the northern border of the empire."
