--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -6,6 +6,11 @@
  korpikoski_estuary_modifier:0 "Korpikoski Estuary"
  rinanakkain_estuary_modifier:0 "Rinanakkain Estuary" 
  dhahabi_estuary_modifier:0 "Alnahrdhabi Estuary" 
+ paraconna_estuary_modifier:0 "Paraconna Estuary"
+ runga_estuary_modifier:0 "Runga Estuary"
+ kwadcoad_estuary_modifier:0 "Kwadcoad Estuary"
+ gusten_estuary_modifier:0 "Gusten Estuary"
+ doniepr_estuary_modifier:0 "Doniepr Estuary"
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
  mezonian_toll:0 "Mezonian Toll"
